Fix article/pagination z-index issue

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -12,6 +12,7 @@
   padding-left: 1.5 * $b-space
   padding-right: 1.5 * $b-space
   position: relative
+  z-index: 200
   +respond-to($g-s)
     margin: $b-space-xl auto $b-space-l
     padding-left: $b-space-l
